# sc-vortex-2d

./: .gitignore  LICENSE  README.md  pyproject.toml
src/json-input/T05/: delta_over_CdGM.json
src/sc-vortex-2d/: vortex.py  vortex_instance.py
src/sc-vortex-2d/json/T03/: delta_over_CdGM.json
src/sc_vortex_2d/: vortex.py
src/sc_vortex_2d/data_vortex/t05/: delta.pkl  spectra.pkl
src/sc_vortex_2d/data_vortex/t08/: delta.pkl
src/sc_vortex_2d/data_vortex/temperature_03/: delta.pkl  spectra.pkl
src/sc_vortex_2d/data_vortex/temperature_05/: spectra.pkl
src/sc_vortex_2d/data_vortex/temperature_08/: spectra.pkl
src/sc_vortex_2d/json-input/T03/: delta.json
src/sc_vortex_2d/json-input/T05/: delta.json
src/sc_vortex_2d/json-input/T08/: delta.json  xs_kf.json
src/sc_vortex_2d/json/T08/: delta_over_CdGM.json
tests/: test.py  test_vortex_instance_t03.py  test_vortex_instance_t05.py  test_vortex_instance_t08.py
