[tool.poetry]
name = "sc-vortex-2d"
version = "1.0.3"
description = "Numerical result of CdGM mode."
authors = ["Shun Makino <shunmakino6211@gmail.com>"]
repository = "https://github.com/ShuN6211/sc-vortex-2d"
readme = "README.md"
packages = [{include = "sc_vortex_2d", from = "src"}]

[tool.poetry.dependencies]
python =  ">=3.9,<3.13"
scipy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
